Add parcel search endpoint
 - tests pending
